# learn-ray-tracing

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.claude/: CLAUDE.md  feature_list.json  init.sh  progress.md  session-handoff.md
.claude/rules/: code-style.md  git-commit.md
3rd/: CMakeLists.txt
openspec/changes/archive/2026-07-11-add-antialiasing-and-camera/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-07-11-add-antialiasing-and-camera/specs/antialiasing/: spec.md
openspec/changes/archive/2026-07-11-add-antialiasing-and-camera/specs/camera/: spec.md
openspec/changes/archive/2026-07-11-add-antialiasing-and-camera/specs/random-utility/: spec.md
openspec/changes/archive/2026-07-11-add-front-face-normal-orientation/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-07-11-add-front-face-normal-orientation/specs/front-face-detection/: spec.md
openspec/changes/archive/2026-07-11-add-hittable-list/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-07-11-add-hittable-list/specs/hittable-list/: spec.md
openspec/specs/antialiasing/: spec.md
openspec/specs/camera/: spec.md
openspec/specs/front-face-detection/: spec.md
openspec/specs/hittable-list/: spec.md
openspec/specs/random-utility/: spec.md
src/: CMakeLists.txt  main.cpp
src/core/: Camera.h  Hittable.h  HittableList.h  Ray.cpp  Ray.h  Renderer.cpp  Renderer.h  Sphere.cpp  Sphere.h
src/utils/: Image.cpp  Image.h  Log.cpp  Log.hpp  Random.h
tests/: CMakeLists.txt  test_camera.cpp  test_hittable_list.cpp  test_image.cpp  test_random.cpp  test_ray.cpp  test_renderer.cpp  test_sphere.cpp
